--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,22 @@
 body{
 	font-family: Georgia, serif;
-	background-color: #000;
+	/* fallback */
+	background-color: #1a82f7;
+
+	/* Safari 4-5, Chrome 1-9 */
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#1a82f7), to(#2F2727));
+
+	/* Safari 5.1, Chrome 10+ */
+	background: -webkit-linear-gradient(top, #2F2727, #1a82f7);
+
+	/* Firefox 3.6+ */
+	background: -moz-linear-gradient(top, #2F2727, #1a82f7);
+
+	/* IE 10 */
+	background: -ms-linear-gradient(top, #2F2727, #1a82f7);
+
+	/* Opera 11.10+ */
+	background: -o-linear-gradient(top, #2F2727, #1a82f7);
 }
 h1{
 	color: #fff;
